radix-transactions/tests/assets/manifest_generator_error_undefined_proof_1.diag
error: undefined proof 'proof_2'
   |
11 | CREATE_PROOF_FROM_BUCKET_OF_AMOUNT Bucket("some_xrd")
12 |   Decimal("1")
13 |   Proof("proof_1");
14 | 
15 | CLONE_PROOF
16 |   Proof("proof_2")
   |         ^^^^^^^^^ undefined proof
17 |   Proof("cloned_proof");
18 | 
19 | DROP_PROOF Proof("proof_1");
20 | DROP_PROOF Proof("cloned_proof");
   |